--- a/app/views/createDetail.html
+++ b/app/views/createDetail.html
@@ -67,7 +67,7 @@
                 <span class="icon-undo" ng-click="onCreateDesignBackClicked()"></span>
             </div>
             <div class="highlightButton">
-                <span class="glyphicon glyphicon-star" ng-click="onOpenPublicGallery()"></span>
+                <span class="icon-ideas2" ng-click="onOpenPublicGallery()"></span>
             </div>
             <div class="cameraButton">
                 <span class="glyphicon glyphicon-camera" ng-click="onOpenMyGallery()"></span>
