--- a/app/views/designDetail.html
+++ b/app/views/designDetail.html
@@ -34,4 +34,7 @@
             <span>您正在浏览的设计是隐私的，如果您是设计者本人，请进入微服私纺公众号(weavesfun)浏览</span>
         </div>
     </div>
+    <div class="naviBtnRow">
+        <span class="icon-undo" ng-click="onBackFromDesignDetailClicked()"></span>
+    </div>
 </div>
