--- a/app/views/personalGallery.html
+++ b/app/views/personalGallery.html
@@ -8,7 +8,7 @@
                 </div>
             </div>
             <div class="uploadTip">
-                <span>请保证照片上传质量<br>（推荐2M左右）</span>
+                <span>请保证照片上传质量<br>（推荐2M左右）<br>点击素材放置到画布</span>
             </div>
         </div>
         <div class="uploadedImageArea">
