--- a/app/views/orderList.html
+++ b/app/views/orderList.html
@@ -30,11 +30,12 @@
                                     <span class="subTitleValue">{{oOrder.uiSize}}</span>
                                     <span class="subTitle">数量</span>
                                     <span class="subTitleValue">{{oOrder.uiQuantity}}</span>
-                                </div>
-                                <div>
                                     <span class="subTitle">所需金额</span>
                                     <span class="rmbTitle">￥</span>
                                     <span class="totalPrice">{{oOrder.totalPrice}}</span>
+                                </div>
+                                <div>
+                                    <span class="expressInfo">{{oOrder.expressInfo}}</span>
                                 </div>
                                 <div>
                                     <span class="orderTip">{{oOrder.tip}}</span>
