--- a/app/app.css
+++ b/app/app.css
@@ -489,7 +489,7 @@ body.weavesFunBody {
 .createDetailView .addressDesignView .naviBtnRow,
 .createDetailView .payCouponListView .naviBtnRow,
 .createDetailView .paySourceListView .naviBtnRow,
-.designDetailViewContent .naviBtnRow {
+.designDetailView .naviBtnRow {
   position: absolute;
   bottom: 3px;
   width: 100%;
@@ -500,7 +500,7 @@ body.weavesFunBody {
 .createDetailView .addressDesignView .naviBtnRow > span,
 .createDetailView .payCouponListView .naviBtnRow > span,
 .createDetailView .paySourceListView .naviBtnRow > span,
-.designDetailViewContent .naviBtnRow > span {
+.designDetailView .naviBtnRow > span {
   font-size: 25px;
   font-weight: bold;
   color: rgb(215, 180, 104);
@@ -1965,6 +1965,11 @@ body.weavesFunBody {
   font-size: 15px;
   color: white;
   font-weight: bold;
+}
+
+.myOrdersView .myOrdersListCarousel .orderGroup .orderItemDiv .orderInfoDiv .expressInfo {
+  font-size: 12px;
+  color: white;
 }
 
 .myOrdersView .myOrdersListCarousel .orderGroup .orderItemDiv .orderInfoDiv .rmbTitle {
