--- a/app/views/managePublicArtifact.html
+++ b/app/views/managePublicArtifact.html
@@ -21,6 +21,7 @@
                     <li><a ng-click="onArtifactTypeChange(oArtifact, 'female')">女属素材</a></li>
                 </ul>
             </div>
+            <span class="icon-cancel artifactRemoveButton" ng-click="onDeleteArtifact(oArtifact)"></span>
         </div>
     </div>
 </div>
