--- a/app/views/orderList.html
+++ b/app/views/orderList.html
@@ -17,7 +17,8 @@
                             <div class="designPreview">
                                 <div class="designPreviewDiv">
                                     <img src="{{oOrder.designId.bkImg}}">
-                                    <img src="{{oOrder.designId.previewImage64}}" style="{{oOrder.previewPosition}}" 
+                                    <img src="{{'/image/' + oOrder.designId.previewImageFile}}" 
+                                    style="{{oOrder.previewPosition}}" 
                                     class="previewImage">
                                 </div>
                             </div>
