--- a/app/views/personalGallery.html
+++ b/app/views/personalGallery.html
@@ -21,15 +21,19 @@
                 rn-carousel-index="aMyArtifactCarouselIndex">
                     <li ng-repeat="oImageGroup in aMyArtifact">
                         <div class="myArtifactsGroupTop">
-                            <img src="{{oImageGroup[0].largeImage64}}" style="margin:auto;" 
+                            <img src="{{'/image/' + oImageGroup[0].previewFileName}}" 
+                            style="{{!!oImageGroup[0] ? '' : 'visibility:hidden;'}}" 
                             ng-click="onArtifactSelected(oImageGroup[0])">
-                            <img src="{{oImageGroup[1].largeImage64}}" style="margin:auto;" 
+                            <img src="{{'/image/' + oImageGroup[1].previewFileName}}" 
+                            style="{{!!oImageGroup[1] ? '' : 'visibility:hidden;'}}" 
                             ng-click="onArtifactSelected(oImageGroup[1])">
                         </div>
                         <div class="myArtifactsGroupBottom">
-                            <img src="{{oImageGroup[2].largeImage64}}" style="margin:auto;" 
+                            <img src="{{'/image/' + oImageGroup[2].previewFileName}}" 
+                            style="{{!!oImageGroup[2] ? '' : 'visibility:hidden;'}}" 
                             ng-click="onArtifactSelected(oImageGroup[2])">
-                            <img src="{{oImageGroup[3].largeImage64}}" style="margin:auto;" 
+                            <img src="{{'/image/' + oImageGroup[3].previewFileName}}" 
+                            style="{{!!oImageGroup[3] ? '' : 'visibility:hidden;'}}" 
                             ng-click="onArtifactSelected(oImageGroup[3])">
                         </div>
                         <!--img src="{{oImage.largeImage64}}" style="margin:auto;" 
