--- a/app/views/publicGallery.html
+++ b/app/views/publicGallery.html
@@ -11,7 +11,7 @@
                 <ul rn-carousel class="image myArtifactsCarousel" rn-carousel-transition="fadeAndSlide"  
                 rn-carousel-index="aPublicArtifactCarouselIndex">
                     <li ng-repeat="oImageGroup in aPublicArtifact">
-                        <div class="myArtifactsGroupTop">
+                        <!--div class="myArtifactsGroupTop">
                             <img src="{{oImageGroup[0].largeImage64}}" style="{{!!oImageGroup[0] ? '' : 'visibility:hidden;'}}" 
                             ng-click="onArtifactSelected(oImageGroup[0])">
                             <img src="{{oImageGroup[1].largeImage64}}" style="{{!!oImageGroup[1] ? '' : 'visibility:hidden;'}}" 
@@ -28,9 +28,25 @@
                             ng-click="onArtifactSelected(oImageGroup[4])">
                             <img src="{{oImageGroup[5].largeImage64}}" style="{{!!oImageGroup[5] ? '' : 'visibility:hidden;'}}" 
                             ng-click="onArtifactSelected(oImageGroup[5])">
+                        </-->
+                        <div class="myArtifactsGroupTop">
+                            <img src="{{'/image/' + oImageGroup[0].previewFileName}}" style="{{!!oImageGroup[0] ? '' : 'visibility:hidden;'}}" 
+                            ng-click="onArtifactSelected(oImageGroup[0])">
+                            <img src="{{'/image/' + oImageGroup[1].previewFileName}}" style="{{!!oImageGroup[1] ? '' : 'visibility:hidden;'}}" 
+                            ng-click="onArtifactSelected(oImageGroup[1])">
                         </div>
-                        <!--img src="{{oImage.largeImage64}}" style="margin:auto;" 
-                        ng-click="onArtifactSelected(oImage)"-->
+                        <div class="myArtifactsGroupBottom">
+                            <img src="{{'/image/' + oImageGroup[2].previewFileName}}" style="{{!!oImageGroup[2] ? '' : 'visibility:hidden;'}}" 
+                            ng-click="onArtifactSelected(oImageGroup[2])">
+                            <img src="{{'/image/' + oImageGroup[3].previewFileName}}" style="{{!!oImageGroup[3] ? '' : 'visibility:hidden;'}}" 
+                            ng-click="onArtifactSelected(oImageGroup[3])">
+                        </div>
+                        <div class="myArtifactsGroupBottom">
+                            <img src="{{'/image/' + oImageGroup[4].previewFileName}}" style="{{!!oImageGroup[4] ? '' : 'visibility:hidden;'}}" 
+                            ng-click="onArtifactSelected(oImageGroup[4])">
+                            <img src="{{'/image/' + oImageGroup[5].previewFileName}}" style="{{!!oImageGroup[5] ? '' : 'visibility:hidden;'}}" 
+                            ng-click="onArtifactSelected(oImageGroup[5])">
+                        </div>
                     </li>
                 </ul>
                 <div rn-carousel-indicators ng-if="aPublicArtifact.length > 1" slides="aPublicArtifact" 
